feat: enhance chat functionality by adding file upload support, improving message handling, and updating localization for corporate tax inquiries

--- a/public/locales/ar/ar.json
+++ b/public/locales/ar/ar.json
@@ -13,18 +13,18 @@
   "upgrade_subscription": "ترقية الاشتراك",
   "start_conversation": "ابدأ محادثة مع أتو - مساعدك الضريبي الشخصي",
   "ask_atto": "اسأل أتو عن الضرائب واللوائح المالية، أو احصل على مساعدة في الحسابات الضريبية.",
-  "category_general": "عام",
-  "category_calculation": "حساب",
-  "category_deductions": "استقطاعات",
-  "category_business": "أعمال",
-  "category_investment": "استثمار",
-  "category_property": "عقار",
-  "suggestion_basic_tax": "ما هي متطلبات تقديم الإقرار الضريبي الأساسية؟",
-  "suggestion_income_tax": "كيف أحسب ضريبة الدخل الخاصة بي؟",
-  "suggestion_deductions": "ما هي الاستقطاعات الضريبية المؤهلة لها؟",
-  "suggestion_business_tax": "ما هي الآثار الضريبية لبدء عمل تجاري؟",
-  "suggestion_investment_tax": "كيف تُفرض الضرائب على عوائد الاستثمار؟",
-  "suggestion_property_benefits": "ما هي المزايا الضريبية المتاحة لأصحاب العقارات؟",
+  "category_corporate_tax_rate": "معدل الضريبة",
+  "category_tax_obligation": "الالتزام الضريبي",
+  "category_free_zone": "المنطقة الحرة",
+  "category_threshold": "الحد الأدنى",
+  "category_registration": "التسجيل",
+  "category_penalties": "الغرامات",
+  "suggestion_corporate_tax_rate": "ما هو معدل ضريبة الشركات في دولة الإمارات ومتى يتم تطبيقه؟",
+  "suggestion_who_pays_corporate_tax": "من المطلوب منه دفع ضريبة الشركات في دولة الإمارات؟",
+  "suggestion_free_zone_companies": "هل تحتاج شركات المنطقة الحرة لدفع ضريبة الشركات؟",
+  "suggestion_taxable_income_threshold": "ما هو حد الدخل الخاضع للضريبة (375,000 درهم إماراتي)؟",
+  "suggestion_registration_filing": "متى وكيف يجب على الشركات التسجيل وتقديم إقرار ضريبة الشركات؟",
+  "suggestion_penalties_compliance": "ما هي العقوبات لعدم الامتثال لقواعد ضريبة الشركات؟",
   "personal_tax_assistant": "أتو - مساعدك الضريبي الشخصي",
   "quota_exceeded": "تجاوز الحد المسموح",
   "quota_exceeded_desc": "لقد نفد رصيد الرسائل لديك. يرجى ترقية اشتراكك لمواصلة المحادثة.",
