--- a/public/locales/en/en.json
+++ b/public/locales/en/en.json
@@ -13,18 +13,18 @@
   "upgrade_subscription": "Upgrade Subscription",
   "start_conversation": "Start a conversation with Atto - Your Personal Tax Assistant",
   "ask_atto": "Ask Atto about taxes, financial regulations, or get help with tax calculations.",
-  "category_general": "General",
-  "category_calculation": "Calculation",
-  "category_deductions": "Deductions",
-  "category_business": "Business",
-  "category_investment": "Investment",
-  "category_property": "Property",
-  "suggestion_basic_tax": "What are the basic tax filing requirements?",
-  "suggestion_income_tax": "How do I calculate my income tax?",
-  "suggestion_deductions": "What tax deductions am I eligible for?",
-  "suggestion_business_tax": "What are the tax implications of starting a business?",
-  "suggestion_investment_tax": "How are investment returns taxed?",
-  "suggestion_property_benefits": "What tax benefits are available for property owners?",
+  "category_corporate_tax_rate": "Tax Rate",
+  "category_tax_obligation": "Tax Obligation",
+  "category_free_zone": "Free Zone",
+  "category_threshold": "Threshold",
+  "category_registration": "Registration",
+  "category_penalties": "Penalties",
+  "suggestion_corporate_tax_rate": "What is the corporate tax rate in the UAE and when does it apply?",
+  "suggestion_who_pays_corporate_tax": "Who is required to pay corporate tax in the UAE?",
+  "suggestion_free_zone_companies": "Do free zone companies need to pay corporate tax?",
+  "suggestion_taxable_income_threshold": "What is the taxable income threshold (AED 375,000)?",
+  "suggestion_registration_filing": "When and how should businesses register and file for corporate tax?",
+  "suggestion_penalties_compliance": "What are the penalties for not complying with corporate tax rules?",
   "personal_tax_assistant": "Atto - Your Personal Tax Assistant",
   "quota_exceeded": "Message Quota Exceeded",
   "quota_exceeded_desc": "Your message tokens have run out. Please upgrade your subscription to continue chatting.",
